re2c-lemon/test/lpmln_lexer.cc
/* Generated by re2c 0.16 on Fri May  6 00:46:34 2016 */
#line 1 "lpmln_lexer.re"
/*
* Author		: Ashish Kumar
* Created		: 04-04-2016
* Version		: 6.0v
* Description		: The lexer program
* Modification log	:
*/

#include <ctype.h>
#include <stdio.h>
#include <vector>
#include <string>
#include <cstring>
#include "lpmln_parser.h"
#define WHITESPACE 25

template<typename char_t>
struct input_t {
    size_t len;
    char_t *str;

    input_t(FILE *f) : len(0), str(NULL)
    {
        fseek(f, 0, SEEK_END);
        len = ftell(f) / sizeof(char_t);
        fseek(f, 0, SEEK_SET);
        str = new char_t[len + 1];
        fread(str, sizeof(char_t), len, f);
        str[len] = 0;
    }
    ~input_t()
    {
        delete[]str;
    }
};

typedef input_t<YYCTYPE>  fio;
using namespace std;

token next_token(YYCTYPE * str){
    YYCTYPE * YYCURSOR = str;
    YYCTYPE * YYMARKER = 0;

        YYCTYPE * start = YYCURSOR;
        token new_token;
        
#line 50 "lpmln_lexer.cc"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case ' ':	goto yy6;
	case '\n':
	case '\r':	goto yy9;
	case '!':	goto yy12;
	case '"':
	case '/':	goto yy14;
	case '(':	goto yy15;
	case ')':	goto yy17;
	case ',':	goto yy19;
	case '.':	goto yy21;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	case '=':	goto yy26;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy28;
	case 'E':	goto yy31;
	case 'F':	goto yy32;
	case '^':	goto yy33;
	case 'v':	goto yy35;
	case '{':	goto yy36;
	case '}':	goto yy38;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 71 "lpmln_lexer.re"
	{ new_token.type = FILE_END; new_token.text = "\x00"; *new_token.next = '\0'; return new_token; return new_token;}
#line 140 "lpmln_lexer.cc"
yy4:
	++YYCURSOR;
yy5:
#line 72 "lpmln_lexer.re"
	{ new_token.type = WHITESPACE; new_token.text = " "; new_token.next = YYCURSOR; return new_token;}
#line 146 "lpmln_lexer.cc"
yy6:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy6;
	default:	goto yy8;
	}
yy8:
#line 69 "lpmln_lexer.re"
	{ new_token.type = WHITESPACE; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 158 "lpmln_lexer.cc"
yy9:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':
	case '\r':	goto yy9;
	default:	goto yy11;
	}
yy11:
#line 70 "lpmln_lexer.re"
	{ new_token.type = NEWLINE; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 170 "lpmln_lexer.cc"
yy12:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy40;
	default:	goto yy13;
	}
yy13:
#line 60 "lpmln_lexer.re"
	{ new_token.type = NOT; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 180 "lpmln_lexer.cc"
yy14:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '"':
	case '/':	goto yy42;
	default:	goto yy5;
	}
yy15:
	++YYCURSOR;
#line 65 "lpmln_lexer.re"
	{ new_token.type = LPAREN; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 192 "lpmln_lexer.cc"
yy17:
	++YYCURSOR;
#line 66 "lpmln_lexer.re"
	{ new_token.type = RPAREN; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 197 "lpmln_lexer.cc"
yy19:
	++YYCURSOR;
#line 64 "lpmln_lexer.re"
	{ new_token.type = COMMA; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 202 "lpmln_lexer.cc"
yy21:
	++YYCURSOR;
#line 63 "lpmln_lexer.re"
	{ new_token.type = PERIOD; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 207 "lpmln_lexer.cc"
yy23:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '.':	goto yy44;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy25;
	}
yy25:
#line 55 "lpmln_lexer.re"
	{ new_token.type = ID_NUMBER; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token;}
#line 228 "lpmln_lexer.cc"
yy26:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '>':	goto yy46;
	default:	goto yy27;
	}
yy27:
#line 57 "lpmln_lexer.re"
	{ new_token.type = ASSIGN; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR;  return new_token;}
#line 238 "lpmln_lexer.cc"
yy28:
	++YYCURSOR;
	yych = *YYCURSOR;
yy29:
	switch (yych) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy28;
	default:	goto yy30;
	}
yy30:
#line 56 "lpmln_lexer.re"
	{ new_token.type = ID; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token;}
#line 313 "lpmln_lexer.cc"
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'X':	goto yy48;
	default:	goto yy29;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy49;
	default:	goto yy29;
	}
yy33:
	++YYCURSOR;
#line 61 "lpmln_lexer.re"
	{ new_token.type = CONJUNCTION; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 330 "lpmln_lexer.cc"
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy50;
	default:	goto yy29;
	}
yy36:
	++YYCURSOR;
#line 67 "lpmln_lexer.re"
	{ new_token.type = LCURL; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 341 "lpmln_lexer.cc"
yy38:
	++YYCURSOR;
#line 68 "lpmln_lexer.re"
	{ new_token.type = RCURL; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 346 "lpmln_lexer.cc"
yy40:
	++YYCURSOR;
#line 59 "lpmln_lexer.re"
	{ new_token.type = NOTEQUALS; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 351 "lpmln_lexer.cc"
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':
	case '\r':
	case '(':
	case ')':
	case '|':	goto yy43;
	default:	goto yy52;
	}
yy43:
	YYCURSOR = YYMARKER;
	goto yy5;
yy44:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy44;
	default:	goto yy25;
	}
yy46:
	++YYCURSOR;
#line 58 "lpmln_lexer.re"
	{ new_token.type = IMPLICATION; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token; }
#line 385 "lpmln_lexer.cc"
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':	goto yy55;
	default:	goto yy29;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy56;
	default:	goto yy29;
	}
yy50:
	++YYCURSOR;
#line 54 "lpmln_lexer.re"
	{ new_token.type = DISJUNCTION; new_token.text = strndup(start, YYCURSOR - start - 1); new_token.next = YYCURSOR - 1; return new_token; }
#line 402 "lpmln_lexer.cc"
yy52:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':
	case '\r':
	case '(':
	case ')':
	case '|':	goto yy54;
	default:	goto yy52;
	}
yy54:
#line 49 "lpmln_lexer.re"
	{ new_token.type = COMMENT; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token;}
#line 417 "lpmln_lexer.cc"
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy57;
	default:	goto yy29;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy58;
	default:	goto yy29;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy59;
	default:	goto yy29;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy61;
	default:	goto yy29;
	}
yy59:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy28;
	default:	goto yy60;
	}
yy60:
#line 52 "lpmln_lexer.re"
	{ new_token.type = EXIST; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token;}
#line 514 "lpmln_lexer.cc"
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy62;
	default:	goto yy29;
	}
yy62:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy28;
	default:	goto yy63;
	}
yy63:
#line 51 "lpmln_lexer.re"
	{ new_token.type = FORALL; new_token.text = strndup(start, YYCURSOR - start); new_token.next = YYCURSOR; return new_token;}
#line 593 "lpmln_lexer.cc"
}
#line 74 "lpmln_lexer.re"

        return new_token;
}
